--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Rohan Kapadiya</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="0; URL=https://rohankapadiya.com/"/>
+     <meta http-equiv="refresh" content="0; URL=https://rohan-website.netlify.app/"/>
    </head>
    <body>
-     <p>This page has been moved. If you are not redirected within 1 seconds, click <a href="https://rohankapadiya.com/">here</a> to go to the Portfolio's homepage.</p>
+     <p>This page has been moved. If you are not redirected within 1 seconds, click <a href="https://rohan-website.netlify.app/">here</a> to go to the Portfolio's homepage.</p>
    </body>
 </html>
